# SBC

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  commit_msg.txt  format.sh  skills-lock.json
.agents/skills/add_third_party_dependency/: SKILL.md
.agents/skills/commit_changes/: SKILL.md
.agents/skills/control-plane-backend/: AGENTS.md
.agents/skills/control-plane-frontend/: AGENTS.md
.agents/skills/sbc-engine/: AGENTS.md
control-plane/backend/: .env-example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  eslint.config.mjs  package.json  tsconfig.json
control-plane/backend/prisma/: schema.prisma
control-plane/backend/src/: app.ts
control-plane/backend/src/controllers/: routesController.ts
control-plane/backend/src/data/: routesTable.ts
control-plane/backend/src/db/: client.ts  prisma.ts  schema.ts  seed.ts
control-plane/backend/src/errors/: BadRequestError.ts  NotFoundError.ts  ServiceUnavailableError.ts  UnauthorizedError.ts  index.ts
control-plane/backend/src/middlewares/: errorHandlerMiddleware.ts  validation.ts
control-plane/backend/src/types/: sipRoutes.ts
control-plane/backend/src/utils/: apiResponse.ts  interfaces.ts  logger.ts
control-plane/frontend/: .gitignore  AGENTS.md  CLAUDE.md  README.md  index.html  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
control-plane/frontend/src/: App.tsx  index.css  main.tsx
control-plane/frontend/src/components/layout/: AppShell.tsx  AppSidebar.tsx  ThemeToggle.tsx
control-plane/frontend/src/features/routes/: RoutesPage.tsx  api.ts  types.ts
control-plane/frontend/src/features/routes/components/: DeleteRouteAlert.tsx  RouteFormDialog.tsx  RouteTable.tsx
control-plane/frontend/src/lib/: api.ts
control-plane/frontend/src/routes/: router.tsx
control-plane/frontend/src/store/: store.ts
engine/: .clangd  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  SbcEngine.cpp  settings-example.toml
engine/call/: call_manager.cpp  call_manager.hpp  call_session.cpp  call_session.hpp  sbc_context.hpp
engine/config/: settings.cpp  settings.hpp
engine/router/: message_router.cpp  message_router.hpp  options_actions.cpp  options_actions.hpp  real_dialog_actions.cpp  real_dialog_actions.hpp  real_setup_actions.cpp  real_setup_actions.hpp
engine/routes/: routes_client.cpp  routes_client.hpp  routes_store.cpp  routes_store.hpp
engine/sip/: pjsip_init.cpp  pjsip_init.hpp  sdp_mangler.cpp  sdp_mangler.hpp
engine/sm/: dialog_sm.hpp  events.hpp  isbc_actions.hpp  options_sm.hpp  setup_sm.hpp  sm_logger.hpp  types.hpp
engine/src/: SbcEngine.cpp  pch.hpp
engine/src/call/: sbc_context.hpp
engine/src/config/: settings.cpp  settings.hpp
engine/src/core/: CMakeLists.txt  SbcEngine.cpp  pch.hpp  settings.hpp
engine/src/core/utils/: error.hpp  sdp_validator.hpp
engine/src/net/: CMakeLists.txt
engine/src/net/rtp/: RtpPacket.hpp  RtpSession.cpp
engine/src/protocols/: CMakeLists.txt  SipRoutes.hpp
engine/src/router/: message_router.hpp  real_dialog_actions.cpp  real_setup_actions.hpp
engine/src/rtp/: RtpSession.cpp
engine/src/sip/: CMakeLists.txt  pch.hpp  pjsip_init.cpp  sdp_mangler.cpp
engine/src/sip/call/: call_manager.cpp  call_manager.hpp  call_session.cpp  call_session.hpp  sbc_context.hpp
engine/src/sip/router/: message_router.cpp  message_router.hpp  options_actions.cpp  options_actions.hpp  real_dialog_actions.cpp  real_dialog_actions.hpp  real_setup_actions.cpp  real_setup_actions.hpp
engine/src/sip/routes/: routes_client.cpp  routes_client.hpp
engine/src/sip/sm/: dialog_sm.hpp  events.hpp  isbc_actions.hpp  options_sm.hpp  setup_sm.hpp  sm_logger.hpp  types.hpp
engine/src/sip/stack/: pjsip_init.cpp  pjsip_init.hpp  sdp_mangler.cpp  sdp_mangler.hpp
engine/src/sm/: dialog_sm.hpp  sm_logger.hpp
engine/tests/: CMakeLists.txt  test_dialog_sm.cpp  test_setup_sm.cpp
engine/utils/: error.hpp  log.hpp  sdp_validator.hpp
schemas/b2bua/: sip_route_rule.json  sip_route_snapshot.json  sip_route_update.json
src/: CMakeLists.txt  main.cpp
src/call/: call_manager.cpp  call_manager.hpp  call_session.cpp  call_session.hpp  sbc_context.hpp
src/protocols/: SipRoutes.hpp
src/router/: message_router.cpp  message_router.hpp  options_actions.cpp  options_actions.hpp  real_dialog_actions.cpp  real_dialog_actions.hpp  real_setup_actions.cpp  real_setup_actions.hpp
src/rtp/: RtpSession.hpp
src/sip/: pjsip_init.cpp  pjsip_init.hpp  sdp_mangler.cpp  sdp_mangler.hpp
src/sm/: dialog_sm.hpp  events.hpp  isbc_actions.hpp  options_sm.cpp  options_sm.hpp  setup_sm.hpp  sm_logger.hpp  types.hpp
src/utils/: log.hpp  sdp_validator.hpp
tests/: CMakeLists.txt  mock_sbc_actions.hpp  test_dialog_sm.cpp  test_options_sm.cpp  test_setup_sm.cpp
tools/: CMakeLists.txt  schema_generator.cpp
